Added Dashboard and Excel Export features

--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -50,6 +50,16 @@ entityResults.previous.description=Go to previous page
 entityResults.next.description=Go to next page
 entityResults.last.description=Go to last page
 
+entityResults.excel.description=Export to Excel
+
+exportForm.caption="Export Parameters"
+
+exportForm.export=Excel Export
+exportForm.export.description= Export to Excel
+exportForm.close=Close
+exportForm.close.description=Close Export Window
+
+
 entityResults.refresh.description=Refresh search results
 entityResults.firstResult.invalid=entry invalid or out of range
 entityResults.showing=Showing
