Removed references to WritableEntity to allow flexibility in entities inheriting alternative classes Moved some databaes properties into application.properties Refactored property names Documented properties Various Spring and properties changes to support latest JBoss and MySQL Changed default database properties to database.prod.properties Minor API changes Changed id-generation to AUTO to support different databases Beautified login form slightly Removed requirement to register in demo Added confirm message when to-many items are added to parent entity Upgraded to vaadin 6.8.0 Fixed bug in clearing fields with attached PropertyFormatter

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
@@ -50,6 +50,7 @@ toManyRelationshipResults.add=Add
 toManyRelationshipResults.add.description=Add related entities
 toManyRelationshipResults.remove=Remove
 toManyRelationshipResults.remove.description=Remove related entities
+toManyRelationshipResults.added=Selected items added!
 toManyRelationshipResults.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
