--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -83,6 +83,7 @@ toManyRelationshipResults.add=Add
 toManyRelationshipResults.add.description=Add related entities
 toManyRelationshipResults.remove=Remove
 toManyRelationshipResults.remove.description=Remove related entities
+toManyRelationshipResults.added=Selected items added!
 toManyRelationshipResults.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
