Minor refactoring to login exception messages, documentation, intellij settings jar, POM files

--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -47,7 +47,7 @@ mainApplication.confirmationYes=Yes
 mainApplication.confirmationNo=No
 mainApplication.confirmationPrompt=Are you really sure?
 mainApplication.footerMessage=Powered by ExpressUI
-mainApplication.footerLink=http://www.expressui.com/
+mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
 mainApplication.notAllowed="Not allowed access to this resource
 
 searchForm.clear=Clear
