Various bug fixes

--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -107,8 +107,9 @@ entityForm.refresh=Refresh
 entityForm.refresh.description=Discard changes and reload entity from database
 entityForm.clear=Clear
 entityForm.clear.description=Clear form
-entityForm.saved=saved!
-entityForm.notSaved=has validation errors!
+entityForm.saveSuccessful=saved!
+entityForm.saveConflictError=Changes conflict with another user's changes. Refresh and try again.
+entityForm.saveValidationError=has validation errors!
 entityForm.previous.description=Discard changes and go to previous record
 entityForm.next.description=Discard changes and go to next record
 
