Added more tool tips and tray notification to demo

--- a/sample/src/main/resources/domainMessages/messages_en.properties
+++ b/sample/src/main/resources/domainMessages/messages_en.properties
@@ -37,4 +37,7 @@
 
 # This file is for externalizing/internationalizing domain- or entity-level messages
 # Here is an example, others may be added.
-com.expressui.sample.entity.Contact.firstName=First Name
+com.expressui.sample.entity.Account.accountTypes=Types
+com.expressui.sample.entity.Account.assignedTo.loginName=Assigned to
+com.expressui.sample.entity.Account.mainPhone=Phone
+
