--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -51,67 +51,67 @@ mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
 mainApplication.notAllowed="Not allowed access to this resource
 
 searchForm.clear=Clear
-searchForm.clear.description=Clear query filter
+searchForm.clear.toolTip=Clear query filter
 searchForm.search=Search
-searchForm.search.description=Execute query
+searchForm.search.toolTip=Execute query
 
-results.first.description=Go to first page
-results.previous.description=Go to previous page
-results.next.description=Go to next page
-results.last.description=Go to last page
+results.first.toolTip=Go to first page
+results.previous.toolTip=Go to previous page
+results.next.toolTip=Go to next page
+results.last.toolTip=Go to last page
 
-results.excel.description=Export to Excel
+results.excel.toolTip=Export to Excel
 
-results.refresh.description=Refresh search results
+results.refresh.toolTip=Refresh search results
 results.firstResult.invalid=entry invalid or out of range
 results.pageSize=per page
 results.select=Select
-results.select.description=Select entity and close window
+results.select.toolTip=Select entity and close window
 results.caption=&nbsp; - {0} out of {1} results.
 
 crudResults.new=New
-crudResults.new.description=Create new entity
+crudResults.new.toolTip=Create new entity
 crudResults.edit=Edit
-crudResults.edit.description=Edit selected entity
+crudResults.edit.toolTip=Edit selected entity
 crudResults.view=View
-crudResults.view.description=View selected entity
+crudResults.view.toolTip=View selected entity
 crudResults.delete=Delete
-crudResults.delete.description=Delete selected entities
+crudResults.delete.toolTip=Delete selected entities
 crudResults.deleted=Selected items deleted!
 
 toManyRelationshipResults.add=Add
-toManyRelationshipResults.add.description=Add related entities
+toManyRelationshipResults.add.toolTip=Add related entities
 toManyRelationshipResults.remove=Remove
-toManyRelationshipResults.remove.description=Remove related entities
+toManyRelationshipResults.remove.toolTip=Remove related entities
 toManyRelationshipResults.added=Selected items added!
 toManyRelationshipResults.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
 exportForm.export=Excel Export
-exportForm.export.description= Export to Excel
+exportForm.export.toolTip= Export to Excel
 exportForm.close=Cancel
-exportForm.close.description=Close Export Window
+exportForm.close.toolTip=Close Export Window
 
 typedForm.add=Add
 typedForm.remove=Remove
-typedForm.tab.description=Right-mouse click to add or remove optional tabs
-typedForm.toggleSearchForm.description=Collapse or expand search form
+typedForm.tab.toolTip=Right-mouse click to add or remove optional tabs
+typedForm.toggleSearchForm.toolTip=Collapse or expand search form
 
 entityForm.cancel=Cancel
-entityForm.cancel.description=Discard changes and close window
+entityForm.cancel.toolTip=Discard changes and close window
 entityForm.saveAndStayOpen=Save
-entityForm.saveAndStayOpen.description=Save changes
+entityForm.saveAndStayOpen.toolTip=Save changes
 entityForm.saveAndClose=Save & Close
-entityForm.saveAndClose.description=Save changes and close window
+entityForm.saveAndClose.toolTip=Save changes and close window
 entityForm.refresh=Refresh
-entityForm.refresh.description=Discard changes and reload entity from database
+entityForm.refresh.toolTip=Discard changes and reload entity from database
 entityForm.clear=Clear
-entityForm.clear.description=Clear form
+entityForm.clear.toolTip=Clear form
 entityForm.saveSuccessful=saved!
 entityForm.saveConflictError=Changes conflict with another user's changes. Refresh and try again.
 entityForm.saveValidationError=has validation errors!
-entityForm.previous.description=Discard changes and go to previous record
-entityForm.next.description=Discard changes and go to next record
+entityForm.previous.toolTip=Discard changes and go to previous record
+entityForm.next.toolTip=Discard changes and go to next record
 
-selectField.clear.description=Clear current entity
-selectField.search.description=Open search popup to select related entity
+selectField.clear.toolTip=Clear current entity
+selectField.search.toolTip=Open search popup to select related entity
