Added bunch of feature tips in tray for demo purposes Enhanced design to allow adding EntitySelects to search form, demoed in AccountSearchForm

--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -115,3 +115,5 @@ entityForm.next.toolTip=Discard changes and go to next record
 
 selectField.clear.toolTip=Clear current entity
 selectField.search.toolTip=Open search popup to select related entity
+
+codePopup.toolTip=See code and Javadoc behind UI component
