--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/domainMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/domainMessages/messages_en.properties
@@ -2,6 +2,6 @@
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
 ${symbol_pound} This file is for externalizing/internationalizing domain- or entity-level messages
-${symbol_pound} Here is an example, others may be added.
+${symbol_pound} Here are some examples, others may be added.
 ${package}.entity.Person.firstName=First Name
 ${package}.entity.Person.lastName=Last Name
