Added handling for concurrent users, where one user deletes entity and another acts upon it Fixed layout refresh issues where layout wasn't being repainted

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
@@ -6,6 +6,7 @@ ${symbol_pound} This file is for externalizing/internationalizing UI-level messa
 
 mainApplication.caption=${artifactId} Application
 mainApplication.dataConstraintViolation=Data constraint violation
+mainApplication.entityNotFound=You are acting on an entity ({0}) that longer exists. Refresh and try again.
 mainApplication.logout=Logout
 mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click me to keep your session active.
 mainApplication.errorWindowCaption=Error
@@ -14,7 +15,7 @@ mainApplication.confirmationYes=Yes
 mainApplication.confirmationNo=No
 mainApplication.confirmationPrompt=Are you really sure?
 mainApplication.footerMessage=Powered by ExpressUI
-mainApplication.footerLink=http://www.expressui.com/
+mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
 mainApplication.notAllowed="Not allowed access to this resource
 
 searchForm.clear=Clear
@@ -82,3 +83,5 @@ entityForm.next.toolTip=Discard changes and go to next record
 
 selectField.clear.toolTip=Clear current entity
 selectField.search.toolTip=Open search popup to select related entity
+
+codePopup.toolTip=See code and Javadoc behind UI component
