--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -1,7 +1,8 @@
 # This file is for externalizing/internationalizing UI-level messages/labels
 
-mainApplication.caption=Application
+mainApplication.caption=Sample Application
 mainApplication.dataConstraintViolation=Data constraint violation
+mainApplication.entityNotFound=You are acting on an entity ({0}) that longer exists. Refresh and try again.
 mainApplication.logout=Logout
 mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click me to keep your session active.
 mainApplication.errorWindowCaption=Error
