--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -43,12 +43,12 @@ crudResults.delete=Delete
 crudResults.delete.toolTip=Delete selected entities
 crudResults.deleted=Selected items deleted!
 
-toManyRelationshipResults.add=Add
-toManyRelationshipResults.add.toolTip=Add related entities
-toManyRelationshipResults.remove=Remove
-toManyRelationshipResults.remove.toolTip=Remove related entities
-toManyRelationshipResults.added=Selected items added!
-toManyRelationshipResults.removed=Selected items removed!
+aggregationRelationship.add=Add
+aggregationRelationship.add.toolTip=Add related entities
+aggregationRelationship.remove=Remove
+aggregationRelationship.remove.toolTip=Remove related entities
+aggregationRelationship.added=Selected items added!
+aggregationRelationship.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
 exportForm.export=Excel Export
@@ -71,7 +71,7 @@ entityForm.refresh=Refresh
 entityForm.refresh.toolTip=Discard changes and reload entity from database
 entityForm.clear=Clear
 entityForm.clear.toolTip=Clear form
-entityForm.saveSuccessful=saved!
+entityForm.saved=saved!
 entityForm.saveConflictError=Changes conflict with another user's changes. Refresh and try again.
 entityForm.saveValidationError=has validation errors!
 entityForm.previous.toolTip=Discard changes and go to previous record
