German language editing

--- a/sample/src/main/resources/ValidationMessages_de.properties
+++ b/sample/src/main/resources/ValidationMessages_de.properties
@@ -1,11 +1,24 @@
-# Here's an example for NotNull, using the word "empty" rather than "null,"
+﻿# Here's an example for NotNull, using the word "empty" rather than "null,"
 # which is more friendly term for an end-user
 
-javax.validation.constraints.NotNull.message=darf nicht leer sein
+javax.validation.constraints.NotNull.message=Feld muss ausgefüllt werden
 
 com.expressui.core.validation.NumberConversionValidator.message=Ungültige Nummer
-com.expressui.core.view.field.FormField.required.message=Erforderliche Wert fehlt
-com.expressui.core.entity.security.ValidPermission.message=Bestehende Erlaubnis Entität bereits zur Auswahl gefunden
+com.expressui.core.view.field.FormField.required.message=Erforderlicher Wert fehlt
+com.expressui.core.entity.security.ValidPermission.message=Zugangsberechtigung für Auswahl des Datensatzes bereits vorhanden
 
 com.expressui.sample.validator.ValidPhone.message=Ungültige Telefonnummer für Region: {0}. Verwenden Sie Format: {1}.
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login-Name ist bereits vergeben
+
+com.expressui.sample.entity.Phone.phoneNumberWithLetters=Telefonnummer darf keine Buchstaben enthalten
+
+# some properties loaded directly by Hibernate (instead of Spring) require unicode escaping
+com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hlte L\u00E4nder
+com.expressui.sample.entity.Address.zipCodeInvalidForUS=US-Postleitzahl muss 5 oder 9-stellig sein
+com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA Postleitzahl muss das Format haben: A0A 0A0
+com.expressui.sample.entity.Address.stateRequiredForCountry=Angabe des Bundeslandes ist f\u00FCr das ausgew\u00E4hlte Land erforderlich
+com.expressui.sample.entity.Opportunity.actualCloseDateRequiredIfSalesStageClosed=Erforderlich, wenn Verkaufsphase abgeschlossen wurde
+com.expressui.sample.entity.Opportunity.actualCloseDateEmptyIfSalesStageOpen=Muss leer sein, wenn Verkaufsphase noch läuft
+com.expressui.sample.entity.Opportunity.expectedCloseDateEmptyIfSalesStageClosed=Muss leer sein, wenn Verkaufsphase abgeschlossen wurde
+com.expressui.core.entity.security.User.passwordsDoNotMatch=Eingegebene Passw\u00F6rter stimmen nicht \u00FCberein
+
