--- a/sample/src/main/resources/ValidationMessages_en.properties
+++ b/sample/src/main/resources/ValidationMessages_en.properties
@@ -10,3 +10,14 @@ com.expressui.core.entity.security.ValidPermission.message=Existing permission e
 
 com.expressui.sample.validator.ValidPhone.message=Invalid phone number for region: {0}. Use format: {1}.
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login name is already taken
+
+com.expressui.sample.entity.Phone.phoneNumberWithLetters=Phone number may not contain letters
+
+com.expressui.sample.entity.Address.zipCodeInvalidForCountry=Zip code invalid for selected country
+com.expressui.sample.entity.Address.zipCodeInvalidForUS=US zip code must be 5 or 9 digits
+com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA zip code must be have the format: A0A 0A0
+com.expressui.sample.entity.Address.stateRequiredForCountry=State is required for selected country
+com.expressui.sample.entity.Opportunity.actualCloseDateRequiredIfSalesStageClosed=Required if Sales Stage is closed
+com.expressui.sample.entity.Opportunity.actualCloseDateEmptyIfSalesStageOpen=Must be empty if Sales Stage is open
+com.expressui.sample.entity.Opportunity.expectedCloseDateEmptyIfSalesStageClosed=Must be empty if Sales Stage is closed
+com.expressui.core.entity.security.User.passwordsDoNotMatch=Entered passwords do not match
