--- a/sample/src/main/resources/domainMessages/messages_en.properties
+++ b/sample/src/main/resources/domainMessages/messages_en.properties
@@ -20,7 +20,7 @@ com.expressui.core.view.security.role.RolePage=Roles
 com.expressui.sample.view.profile.ProfilePage=Profiles
 com.expressui.sample.view.myprofile.MyProfilePage=My Account {0}
 com.expressui.sample.SampleApplication.logout=Logout
-com.expressui.sample.SampleApplication.language=My Language
+com.expressui.sample.SampleApplication.language=Language
 com.expressui.sample.SampleApplication.setEnglish=English
 com.expressui.sample.SampleApplication.setGerman=Deutsch
 
