--- a/sample/src/main/resources/domainMessages/messages_de.properties
+++ b/sample/src/main/resources/domainMessages/messages_de.properties
@@ -2,7 +2,7 @@
 
 com.expressui.sample.SampleApplication=Sample Application
 
-com.expressui.core.entity.AuditableEntity.lastModified=Zuletzt Geändert
+com.expressui.core.entity.AuditableEntity.lastModified=Zuletzt geändert
 com.expressui.core.entity.AuditableEntity.modifiedBy=Geändert von
 com.expressui.core.entity.AuditableEntity.created=Erstellt
 com.expressui.core.entity.AuditableEntity.createdBy=Erstellt von
@@ -18,47 +18,47 @@ com.expressui.sample.SampleApplication.security=Sicherheit
 com.expressui.core.view.security.user.UserPage=Benutzer
 com.expressui.core.view.security.role.RolePage=Rollen
 com.expressui.sample.view.profile.ProfilePage=Profile
-com.expressui.sample.view.myprofile.MyProfilePage=Ihr Konto {0}
+com.expressui.sample.view.myprofile.MyProfilePage=Mein Konto {0}
 com.expressui.sample.SampleApplication.logout=Logout
-com.expressui.sample.SampleApplication.language=Meine Sprache
+com.expressui.sample.SampleApplication.language=Sprache
 com.expressui.sample.SampleApplication.setEnglish=English
 com.expressui.sample.SampleApplication.setGerman=Deutsch
 
 com.expressui.sample.view.LoginPage=Login
-com.expressui.sample.view.registration.RegistrationPage=Anmeldung
+com.expressui.sample.view.registration.RegistrationPage=Anmelden
 
-com.expressui.sample.SampleApplication.internetConnectivityError=Die Beispielanwendung ist eine Internetverbindung erforderlich. </ Br> Wenn es hinter einem Proxy läuft, \
+com.expressui.sample.SampleApplication.internetConnectivityError=Die Beispielapplikation erfordet eine Internetverbindung. </ Br> Wenn es hinter einem Proxy läuft, \
    konfigurieren Sie bitte http.proxyHost und http.proxyPort in application.properties.
 
 com.expressui.core.entity.security.User=Benutzer
-com.expressui.core.entity.security.User.loginName=Benutzerkennung
+com.expressui.core.entity.security.User.loginName=Benutzername
 com.expressui.core.entity.security.User.loginPassword=Login Passwort
-com.expressui.core.entity.security.User.repeatLoginPassword=Wiederholen Login Passwort
-com.expressui.core.entity.security.User.accountExpired=Konto Abgelaufen
-com.expressui.core.entity.security.User.accountLocked=Konto Gesperrt
-com.expressui.core.entity.security.User.credentialsExpired=Anmeldeinformationen Abgelaufen
+com.expressui.core.entity.security.User.repeatLoginPassword=Login Passwort wiederholen
+com.expressui.core.entity.security.User.accountExpired=Konto abgelaufen
+com.expressui.core.entity.security.User.accountLocked=Konto gesperrt
+com.expressui.core.entity.security.User.credentialsExpired=Anmeldeinformationen abgelaufen
 com.expressui.core.entity.security.User.enabled=Aktiviert
 com.expressui.core.entity.security.User.lastModified=Zuletzt geändert
 com.expressui.core.entity.security.User.modifiedBy=Geändert von
-com.expressui.core.entity.security.User.userRoles=Rollen
+com.expressui.core.entity.security.User.userRoles=Funktionen
 
-com.expressui.core.entity.security.Role=Rolle
-com.expressui.core.entity.security.Role.allowOrDenyByDefault=Standard Erlauben/Verleugnen
+com.expressui.core.entity.security.Role=Funktion
+com.expressui.core.entity.security.Role.allowOrDenyByDefault=Standard Erlauben/Ablehnen
 com.expressui.core.entity.security.Role.description=Beschreibung
 com.expressui.core.entity.security.Role.userRoles=Benutzer
-com.expressui.core.entity.security.Role.permissions=Berechtigungen
+com.expressui.core.entity.security.Role.permissions=Zugangsberechtigungen
 
-com.expressui.core.entity.security.Permission=Erlaubnis
+com.expressui.core.entity.security.Permission=Zugangsberechtigung
 com.expressui.core.entity.security.Permission.targetType=Zieltyp
-com.expressui.core.entity.security.Permission.targetTypeLabel=Zieltyp Bezeichung
+com.expressui.core.entity.security.Permission.targetTypeLabel=Zieltyp Bezeichnung
 com.expressui.core.entity.security.Permission.field=Feld
 com.expressui.core.entity.security.Permission.fieldLabel=Feldbezeichnung
-com.expressui.core.entity.security.Permission.viewAllowed=Ansicht Erlaubt
-com.expressui.core.entity.security.Permission.editAllowed=Bearbeiten Erlaubt
-com.expressui.core.entity.security.Permission.createAllowed=Erstellen Erlaubt
-com.expressui.core.entity.security.Permission.deleteAllowed=Löschen Erlaubt
+com.expressui.core.entity.security.Permission.viewAllowed=Ansicht erlaubt
+com.expressui.core.entity.security.Permission.editAllowed=Bearbeiten erlaubt
+com.expressui.core.entity.security.Permission.createAllowed=Erstellen erlaubt
+com.expressui.core.entity.security.Permission.deleteAllowed=Löschen erlaubt
 
-com.expressui.sample.entity.Address.street=Strasse
+com.expressui.sample.entity.Address.street=Straße
 com.expressui.sample.entity.Address.city=Stadt
 com.expressui.sample.entity.Address.zipCode=PLZ
 com.expressui.sample.entity.Address.zipCode.toolTip=PLZ Bereich: <li> {0} - {1} </ li> </ ul>
@@ -70,26 +70,26 @@ com.expressui.sample.entity.State.code=Bundesland
 
 com.expressui.sample.dao.query.AccountQuery.name=Name
 com.expressui.sample.dao.query.AccountQuery.country=Land
-com.expressui.sample.dao.query.AccountQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesstaat zu sehen
+com.expressui.sample.dao.query.AccountQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesland zu sehen
 com.expressui.sample.dao.query.AccountQuery.states=Bundesländer
 
 com.expressui.sample.view.account.AccountForm.overview=Überblick
 com.expressui.sample.entity.Account=Firma
 com.expressui.sample.entity.Account.assignedTo.loginName=Zugewiesen an
 com.expressui.sample.entity.Account.website=Webseite
-com.expressui.sample.entity.Account.accountTypes=Sorten
+com.expressui.sample.entity.Account.accountTypes=Kategorie
 com.expressui.sample.entity.Account.email=E-mail
-com.expressui.sample.entity.Account.contacts=Firmenkontakten
+com.expressui.sample.entity.Account.contacts=Firmenkontakte
 com.expressui.sample.entity.Account.opportunities=Verkaufschancen
 
 com.expressui.sample.view.account.AccountForm.details=Einzelheiten
-com.expressui.sample.entity.Account.tickerSymbol=Börsenticker
+com.expressui.sample.entity.Account.tickerSymbol=Wertpapierkennnummer
 com.expressui.sample.entity.Account.industry=Branche
 com.expressui.sample.entity.Account.numberOfEmployees=Anzahl der Mitarbeiter
 com.expressui.sample.entity.Account.annualRevenue=Jahresumsatz
-com.expressui.sample.entity.Account.annualRevenueInUSD=Jahresumsatz von USD
+com.expressui.sample.entity.Account.annualRevenueInUSD=Jahresumsatz in USD
 com.expressui.sample.entity.Account.currency=Währung
-com.expressui.sample.entity.Account.currency.toolTip=Ändern, um Wechselkursveränderungen Betrag in USD
+com.expressui.sample.entity.Account.currency.toolTip=Ändern um Wechselkursveränderungen Betrag in USD
 
 com.expressui.sample.view.account.AccountForm.billingAddress=Rechnungsadresse
 com.expressui.sample.entity.Account.mainPhone=Telefon
@@ -103,7 +103,7 @@ com.expressui.sample.view.contact.ContactForm.overview=Überblick
 com.expressui.sample.entity.Contact=Kontakt
 com.expressui.sample.entity.Contact.firstName=Vorname
 com.expressui.sample.entity.Contact.lastName=Nachname
-com.expressui.sample.entity.Contact.title=Titel
+com.expressui.sample.entity.Contact.title=Funktion
 com.expressui.sample.entity.Contact.birthDate=Geburtsdatum
 com.expressui.sample.entity.Contact.account.name=Firmenname
 com.expressui.sample.entity.Contact.leadSource=Interessent
@@ -121,26 +121,26 @@ com.expressui.sample.view.contact.ContactForm.otherAddress=Andere Adresse
 com.expressui.sample.view.contact.ContactForm.description=Beschreibung
 com.expressui.sample.entity.Contact.description=
 
-com.expressui.sample.dao.query.OpportunityQuery.accountName=Firmaname
+com.expressui.sample.dao.query.OpportunityQuery.accountName=Firmename
 com.expressui.sample.dao.query.OpportunityQuery.salesStages=Verkaufsphase
 
 com.expressui.sample.view.opportunity.OpportunityForm.overview=Überblick
-com.expressui.sample.entity.Opportunity=Gelegenheit
+com.expressui.sample.entity.Opportunity=Verkaufschancen
 com.expressui.sample.entity.Opportunity.opportunityType=Typ
 com.expressui.sample.entity.Opportunity.account.name=Firmenname
 com.expressui.sample.entity.Opportunity.leadSource=Interessent
 com.expressui.sample.entity.Opportunity.salesStage=Verkaufsphase
-com.expressui.sample.entity.Opportunity.salesStage.toolTip=Ändern Sie den Verkaufsphase Änderungen Wahrscheinlichkeit
+com.expressui.sample.entity.Opportunity.salesStage.toolTip=Änderung der Verkaufsphase ändert die Wahrscheinlichkeit
 com.expressui.sample.entity.Opportunity.assignedTo.loginName=Zugewiesen an
 com.expressui.sample.entity.Opportunity.probability=Wahrscheinlichkeit
-com.expressui.sample.entity.Opportunity.probability.toolTip=Veränderung der Wahrscheinlichkeit ändert Wert in USD gewichtet
+com.expressui.sample.entity.Opportunity.probability.toolTip=Änderung der Wahrscheinlichkeit ändert den Wert in USD
 com.expressui.sample.entity.Opportunity.currency=Währung
-com.expressui.sample.entity.Opportunity.currency.toolTip=Veränderung der Währung ändert Wert in USD gewichtet
+com.expressui.sample.entity.Opportunity.currency.toolTip=Änderung der Währung ändert den Wert in USD
 com.expressui.sample.entity.Opportunity.amount=Betrag
-com.expressui.sample.entity.Opportunity.amount.toolTip=Veränderung der Menge Veränderungen Wert in USD gewichtet
-com.expressui.sample.entity.Opportunity.valueWeightedInUSD=Gewichtete Betrag in USD
-com.expressui.sample.entity.Opportunity.expectedCloseDate=Geschätzte Abschlussdatum
-com.expressui.sample.entity.Opportunity.actualCloseDate=Tatsächlich Datum Geschlossen
+com.expressui.sample.entity.Opportunity.amount.toolTip=Änderung der Menge ändert den Wert in USD
+com.expressui.sample.entity.Opportunity.valueWeightedInUSD=Gewichteter Betrag in USD
+com.expressui.sample.entity.Opportunity.expectedCloseDate=Geschätztes Abschlussdatum
+com.expressui.sample.entity.Opportunity.actualCloseDate=Tatsächliches Abschlussdatum
 
 com.expressui.sample.view.opportunity.OpportunityForm.description=Beschreibung
 com.expressui.sample.entity.Opportunity.description=
@@ -148,8 +148,8 @@ com.expressui.sample.entity.Opportunity.description=
 com.expressui.sample.entity.Profile=Profil
 com.expressui.sample.entity.Profile.firstName=Vorname
 com.expressui.sample.entity.Profile.lastName=Nachname
-com.expressui.sample.entity.Profile.title=Titel
-com.expressui.sample.entity.Profile.companyWebsite=Unternehmens-Website
+com.expressui.sample.entity.Profile.title=Funktion
+com.expressui.sample.entity.Profile.companyWebsite=Firmenwebseite
 com.expressui.sample.entity.Profile.email=E-mail
 com.expressui.sample.entity.Profile.phone=Telefon
 com.expressui.sample.entity.Profile.phone.toolTip=Beispielformat: {0}
@@ -160,7 +160,7 @@ com.expressui.sample.entity.Profile.user.repeatLoginPassword=Wiederholen Login P
 
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.lastName=Nachname
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country=Land
-com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesstaat zu sehen
+com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesland zu sehen
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.states=Bundesländer
 
 com.expressui.core.dao.security.query.RoleQuery.name=Name
