--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -1,9 +1,9 @@
 # This file is for externalizing/internationalizing UI-level messages/labels
 
-mainApplication.dataConstraintViolation=Daten Einschränkungsverletzung
-mainApplication.entityNotFound=Sie bieten hier auf eine Entität ({0}), die mehr existiert handeln. Aktualisieren und erneut versuchen.
-mainApplication.logout=Abmeldung
-mainApplication.timeoutWarning=Ihre Sitzung wird in {0} Minuten auslaufen. Klicken Sie auf mich, um Ihre Sitzung aktiv.
+mainApplication.dataConstraintViolation=Unzulässige Eingabe
+mainApplication.entityNotFound=Datensatz nicht mehr vorhanden ({0}). Aktualisieren und erneut versuchen.
+mainApplication.logout=Abmelden
+mainApplication.timeoutWarning=Ihre Verbindung wird in {0} Minuten beendet. Klicken Sie hier, um die Verbindung erneut zu aktivieren.
 mainApplication.errorWindowCaption=Fehler
 mainApplication.confirmationCaption=Bestätigen Sie bitte:
 mainApplication.confirmationYes=Ja
@@ -11,17 +11,17 @@ mainApplication.confirmationNo=Nein
 mainApplication.confirmationPrompt=Sind Sie sicher?
 mainApplication.footerMessage=Powered by ExpressUI
 mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
-mainApplication.notAllowed=Nicht erlaubt Zugriff auf diese Ressource
+mainApplication.notAllowed=Nicht erlaubter Zugriff
 
-searchForm.clear=Leeren
-searchForm.clear.toolTip=Leeren die Abfrage
+searchForm.clear=Zurücksetzen
+searchForm.clear.toolTip=Zurücksetzen der Suchabfrage
 searchForm.search=Suchen
-searchForm.search.toolTip=Führen Sie die Abfrage
-searchForm.typeCaption={0} Abfrage-Formular
+searchForm.search.toolTip=Suchabfrage durchführen
+searchForm.typeCaption={0} Suchabfrage-Formular
 
 results.first.toolTip=Zur ersten Seite
-results.previous.toolTip=Zur letzten Seite
-results.next.toolTip=Zur nächsten Seite
+results.previous.toolTip=Zurück
+results.next.toolTip=Vor
 results.last.toolTip=Zur letzten Seite
 
 results.excel.toolTip=Export nach Excel
@@ -31,37 +31,37 @@ results.firstResult.invalid=Eintrag ungültig oder außerhalb des zulässigen Be
 results.pageSize=pro Seite
 results.select=Auswählen
 results.select.toolTip=Objekt auswählen und Fenster schließen
-results.caption=&nbsp; - {0} von {1} Ergebnisse.
+results.caption=&nbsp; - {0} von {1} Ergebnissen.
 
 crudResults.new=Neu
-crudResults.new.toolTip=Erstellen Sie neue Entität
+crudResults.new.toolTip=Neuen Datensatz erstellen
 crudResults.edit=Bearbeiten
-crudResults.edit.toolTip=Ausgewählte Entität bearbeiten
-crudResults.view=Sehen
-crudResults.view.toolTip=Alle ausgewählten Unternehmen
+crudResults.edit.toolTip=Ausgewählten Datensatz bearbeiten
+crudResults.view=Ansehen
+crudResults.view.toolTip=Ausgewählten Datensatz ansehen
 crudResults.delete=Löschen
-crudResults.delete.toolTip=Löschen ausgewählter Entität
-crudResults.deleted=Ausgewählter Entität gelöscht!
+crudResults.delete.toolTip=Ausgewählte Datensätze löschen
+crudResults.deleted=Ausgewählte Datensätze gelöscht!
 
 aggregationRelationship.add=Hinzufügen
-aggregationRelationship.add.toolTip=Hinzufügen Entitäten
+aggregationRelationship.add.toolTip=Datensätze hinzufügen
 aggregationRelationship.remove=Entfernen
-aggregationRelationship.remove.toolTip=Entfernen verbundenen Unternehmen
-aggregationRelationship.added=Ausgewählte Entitäten hinzugefügt!
-aggregationRelationship.removed=Ausgewählte Entitäten Entfernt!
+aggregationRelationship.remove.toolTip=Datensätze entfernen
+aggregationRelationship.added=Ausgewählte Datensätze hinzugefügt!
+aggregationRelationship.removed=Ausgewählte Datensätze entfernt!
 
 exportForm.caption="Export Parameter"
 exportForm.typeCaption=Excel Export
 exportForm.export=Excel Export
-exportForm.export.toolTip= Export nach Excel
+exportForm.export.toolTip=Export nach Excel
 exportForm.close=Abbrechen
-exportForm.close.toolTip=Schließen Fenster-Export
-exportForm.exportFilename=Exportdateinamen
+exportForm.close.toolTip=Export abbrechen
+exportForm.exportFilename=Export Dateiname
 exportForm.workbookName=Arbeitsmappe Name
-exportForm.sheetName=Arbeitsblatt
+exportForm.sheetName=Blatt
 exportForm.dateFormat=Datumsformat
 exportForm.doubleFormat=Zahlenformat
-exportForm.displayRowHeaders=Anzeigen von Zeilen-Header
+exportForm.displayRowHeaders=Anzeigen der Zeilenüberschriften
 exportForm.displayTotals=Summen anzeigen
 exportForm.defaultWorkbookName=Export
 exportForm.defaultSheetName=Export
@@ -71,36 +71,36 @@ exportForm.defaultDoubleFormat=#.000,00
 
 typedForm.add=Hinzufügen
 typedForm.remove=Entfernen
-typedForm.tab.toolTip=Rechter Mausklick zum Hinzufügen oder Entfernen optionaler Registerkarten
-typedForm.toggleSearchForm.toolTip=Reduzieren oder zu erweitern Suchformular
+typedForm.tab.toolTip=Rechter Mausklick zum Hinzufügen oder Entfernen des Eingabefeldes
+typedForm.toggleSearchForm.toolTip=Suchformular öffnen und schließen
 
 entityForm.cancel=Abbrechen
 entityForm.cancel.toolTip=Änderungen verwerfen und Fenster schließen
 entityForm.saveAndStayOpen=Speichern
-entityForm.saveAndStayOpen.toolTip=Speichern Sie die Änderungen
+entityForm.saveAndStayOpen.toolTip=Änderungen speichern
 entityForm.saveAndClose=Speichern & Schließen
 entityForm.saveAndClose.toolTip=Änderungen speichern und Fenster schließen
 entityForm.refresh=Aktualisieren
-entityForm.refresh.toolTip=Änderungen verwerfen und neu zu laden Unternehmen aus der Datenbank
-entityForm.clear=Leeren
-entityForm.clear.toolTip=Leeren Formular
+entityForm.refresh.toolTip=Änderungen verwerfen und Datensatz neu laden
+entityForm.clear=Zurücksetzen
+entityForm.clear.toolTip=Zurücksetzen Formular
 entityForm.saved=Gespeichert!
-entityForm.saveConflictError=Änderungen Konflikt mit Änderungen eines anderen Benutzers. Aktualisieren und erneut versuchen.
-entityForm.saveValidationError=hat Validierungsfehler!
-entityForm.previous.toolTip=Änderungen verwerfen und zum vorherigen Rekord
-entityForm.next.toolTip=Änderungen verwerfen und zum nächsten Rekord
+entityForm.saveConflictError=Änderungen kollidieren mit Änderungen eines anderen Nutzers. Aktualisieren und erneut versuchen.
+entityForm.saveValidationError=ist ungültig!
+entityForm.previous.toolTip=Änderungen verwerfen und zurück zum vorherigen Datensatz
+entityForm.next.toolTip=Änderungen verwerfen und weiter zum nächsten Datensatz
 entityForm.typeCaption={0} Forumular
 entityForm.entityCaption.new={0} Forumular - Neu
 entityForm.entityCaption.existing={0} Forumular - {1}
-entityForm.tabWithInvalidValues=Tab enthält ungültige Werte
+entityForm.tabWithInvalidValues=Eingabefeld enthält ungültige Werte
 entityForm.formWithInvalidValues=Formular enthält ungültige Werte
 
-selectField.clear.toolTip=Leeren Sie die aktuellen Entität
-selectField.search.toolTip=Öffnen Sie suchen Popup an verbundene Einrichtung auswählen
+selectField.clear.toolTip=Formular zurücksetzen
+selectField.search.toolTip=Fenster öffnen um Datensatz auszuwählen
 
 formField.defaultLabelSectionDisplayName=Formular
 resultsField.defaultLabelSectionDisplayName=Spalte
-formFieldSet.select.nullCaption=Keiner
+formFieldSet.select.nullCaption=Keine Auswahl
 
 entitySelect.typeCaption=Auswählen {0}
 
@@ -110,21 +110,21 @@ loginPage.caption=Login
 loginPage.username=Benutzername
 loginPage.password=Passwort
 loginPage.button=Login
-loginPage.tip=Tipp: login als guest/guest
+loginPage.tip=Login als guest/guest
 loginPage.IncorrectCredentialsException=Ungültiges Passwort
-loginPage.LoginNameNotFoundException=Ungültige Login-Namen
+loginPage.LoginNameNotFoundException=Ungültiger Login-Name
 loginPage.AccountLockedException=Konto wurde gesperrt
 loginPage.CredentialsExpiredException=Anmeldeinformationen abgelaufen
 loginPage.AccountExpiredException=Konto abgelaufen
 loginPage.AccountDisabledException=Konto wurde deaktiviert
 
-registrationForm.registrationSuccessful=Ihre Anmeldung war erfolgreich. Sie können sich jetzt anmelden.
+registrationForm.registrationSuccessful=Ihre Registrierung war erfolgreich. Sie können sich jetzt über Login anmelden.
 
-sampleDashBoard.recentContacts=Letzte Kontakte
-sampleDashBoard.contactLocation=Kontakt Lage
-sampleDashBoard.opportunityChartByYear=Vertrieb - Gewonnen & Verloren
+sampleDashBoard.recentContacts=Zuletzt geänderte Kontakte
+sampleDashBoard.contactLocation=Lage des Kontakts
+sampleDashBoard.opportunityChartByYear=Vertrieb - Erfolgreich & Nicht erfolgreich
 sampleDashBoard.opportunityChartByYear.axisLabel=Jahr
-sampleDashBoard.opportunityChartByYear.closedWon=Geschlossen Gewonnen
-sampleDashBoard.opportunityChartByYear.closedLost=Geschlossen Verloren
-sampleDashBoard.opportunityChartBySalesStage=Verkaufsphase Breakdown
+sampleDashBoard.opportunityChartByYear.closedWon=Erfolgreich abgeschlossen
+sampleDashBoard.opportunityChartByYear.closedLost=Nicht erfolgreich abgeschlossen
+sampleDashBoard.opportunityChartBySalesStage=Verkaufsphase Übersicht
 sampleDashBoard.opportunitySalesStages=Verkaufsphase
