--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -1,7 +1,7 @@
 # This file is for externalizing/internationalizing UI-level messages/labels
 
 mainApplication.dataConstraintViolation=Data constraint violation
-mainApplication.entityNotFound=You are acting on an entity ({0}) that longer exists. Refresh and try again.
+mainApplication.entityNotFound=You are acting on an entity ({0}) that no longer exists. Refresh and try again.
 mainApplication.logout=Logout
 mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click me to keep your session active.
 mainApplication.errorWindowCaption=Error
@@ -52,6 +52,7 @@ aggregationRelationship.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
 exportForm.typeCaption=Excel Export
+exportForm.export=Excel Export
 exportForm.export.toolTip= Export to Excel
 exportForm.close=Cancel
 exportForm.close.toolTip=Close Export Window
@@ -120,7 +121,7 @@ loginPage.AccountDisabledException=Account has been disabled
 
 registrationForm.registrationSuccessful=Your registration was successful. You may now login.
 
-sampleDashBoard.recentContacts=Recent Contacts
+sampleDashBoard.recentContacts=Recently Modified Contacts
 sampleDashBoard.contactLocation=Contact Location
 sampleDashBoard.opportunityChartByYear=Sales - Won & Lost
 sampleDashBoard.opportunityChartByYear.axisLabel=Year
