Javadoc enhancements, language enhancements, few bug fixes

--- a/sample/src/main/resources/domainMessages/messages_de.properties
+++ b/sample/src/main/resources/domainMessages/messages_de.properties
@@ -1,6 +1,6 @@
 ﻿# This file is for externalizing/internationalizing domain- or entity-level messages
 
-com.expressui.sample.SampleApplication=Sample Application
+com.expressui.sample.SampleApplication=Beispielapplikation
 
 com.expressui.core.entity.AuditableEntity.lastModified=Zuletzt geändert
 com.expressui.core.entity.AuditableEntity.modifiedBy=Geändert von
@@ -25,7 +25,7 @@ com.expressui.sample.SampleApplication.setEnglish=English
 com.expressui.sample.SampleApplication.setGerman=Deutsch
 
 com.expressui.sample.view.LoginPage=Login
-com.expressui.sample.view.registration.RegistrationPage=Anmelden
+com.expressui.sample.view.registration.RegistrationPage=Registrieren
 
 com.expressui.sample.SampleApplication.internetConnectivityError=Die Beispielapplikation erfordet eine Internetverbindung. </ Br> Wenn es hinter einem Proxy läuft, \
    konfigurieren Sie bitte http.proxyHost und http.proxyPort in application.properties.
@@ -40,15 +40,15 @@ com.expressui.core.entity.security.User.credentialsExpired=Anmeldeinformationen 
 com.expressui.core.entity.security.User.enabled=Aktiviert
 com.expressui.core.entity.security.User.lastModified=Zuletzt geändert
 com.expressui.core.entity.security.User.modifiedBy=Geändert von
-com.expressui.core.entity.security.User.userRoles=Funktionen
+com.expressui.core.entity.security.User.userRoles=Rollen
 
-com.expressui.core.entity.security.Role=Funktion
+com.expressui.core.entity.security.Role=Rolle
 com.expressui.core.entity.security.Role.allowOrDenyByDefault=Standard Erlauben/Ablehnen
 com.expressui.core.entity.security.Role.description=Beschreibung
 com.expressui.core.entity.security.Role.userRoles=Benutzer
-com.expressui.core.entity.security.Role.permissions=Zugangsberechtigungen
+com.expressui.core.entity.security.Role.permissions=Berechtigungen
 
-com.expressui.core.entity.security.Permission=Zugangsberechtigung
+com.expressui.core.entity.security.Permission=Berechtigung
 com.expressui.core.entity.security.Permission.targetType=Zieltyp
 com.expressui.core.entity.security.Permission.targetTypeLabel=Zieltyp Bezeichnung
 com.expressui.core.entity.security.Permission.field=Feld
@@ -112,7 +112,7 @@ com.expressui.sample.entity.Contact.doNotEmail=Kein E-mail
 com.expressui.sample.entity.Contact.mainPhone=Telefon
 com.expressui.sample.entity.Contact.mainPhone.toolTip=Beispielformat: {0}
 com.expressui.sample.entity.Contact.mainPhoneType=
-com.expressui.sample.entity.Contact.doNotCall=Rufen Sie nicht
+com.expressui.sample.entity.Contact.doNotCall=Kein Anruf
 com.expressui.sample.entity.Contact.assignedTo.loginName=Zugewiesen an
 
 com.expressui.sample.view.contact.ContactForm.mailingAddress=Postanschrift
@@ -167,4 +167,4 @@ com.expressui.core.dao.security.query.RoleQuery.name=Name
 
 com.expressui.core.dao.security.query.UserQuery.loginName=Login Name
 
-com.expressui.sample.view.registration.RegistrationForm=Anmelden
+com.expressui.sample.view.registration.RegistrationForm=Registrieren
