--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -111,7 +111,7 @@ loginPage.caption=Login
 loginPage.username=Username
 loginPage.password=Password
 loginPage.button=Login
-loginPage.tip=Tip: login as guest/guest
+loginPage.tip=Login as guest/guest
 loginPage.IncorrectCredentialsException=Invalid password
 loginPage.LoginNameNotFoundException=Invalid login name
 loginPage.AccountLockedException=Account has been locked
