--- a/sample/src/main/resources/ValidationMessages_de.properties
+++ b/sample/src/main/resources/ValidationMessages_de.properties
@@ -13,7 +13,7 @@ com.expressui.sample.validator.UniqueLoginNameValidator.message=Login-Name ist b
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Telefonnummer darf keine Buchstaben enthalten
 
 # some properties loaded directly by Hibernate (instead of Spring) require unicode escaping
-com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hlte L\u00E4nder
+com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hlten Land
 com.expressui.sample.entity.Address.zipCodeInvalidForUS=US-Postleitzahl muss 5 oder 9-stellig sein
 com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA Postleitzahl muss das Format haben: A0A 0A0
 com.expressui.sample.entity.Address.stateRequiredForCountry=Angabe des Bundeslandes ist f\u00FCr das ausgew\u00E4hlte Land erforderlich
