Javadoc enhancements, minor language enhancements and bug fixes

--- a/sample/src/main/resources/ValidationMessages_de.properties
+++ b/sample/src/main/resources/ValidationMessages_de.properties
@@ -1,13 +1,15 @@
 ﻿# Here's an example for NotNull, using the word "empty" rather than "null,"
 # which is more friendly term for an end-user
 
-javax.validation.constraints.NotNull.message=Feld muss ausgefüllt werden
+javax.validation.constraints.NotNull.message=Feld muss ausgef\u00FCllt werden
 
 com.expressui.core.validation.NumberConversionValidator.message=Ungültige Nummer
 com.expressui.core.view.field.FormField.required.message=Erforderlicher Wert fehlt
+com.expressui.core.view.field.FormField.dateParseError.message=Datumsformat ist ungültige
 com.expressui.core.entity.security.ValidPermission.message=Zugangsberechtigung für Auswahl des Datensatzes bereits vorhanden
 
 com.expressui.sample.validator.ValidPhone.message=Ungültige Telefonnummer für Region: {0}. Verwenden Sie Format: {1}.
+com.expressui.sample.validator.PhoneConversionValidator.message=Ungültige Telefonnummer
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login-Name ist bereits vergeben
 
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Telefonnummer darf keine Buchstaben enthalten
