--- a/sample/src/main/resources/ValidationMessages_en.properties
+++ b/sample/src/main/resources/ValidationMessages_en.properties
@@ -6,9 +6,11 @@ javax.validation.constraints.NotNull.message=may not be empty
 
 com.expressui.core.validation.NumberConversionValidator.message=Invalid number
 com.expressui.core.view.field.FormField.required.message=Required value is missing
+com.expressui.core.view.field.FormField.dateParseError.message=Date format not recognized
 com.expressui.core.entity.security.ValidPermission.message=Existing permission entity already found for selection
 
 com.expressui.sample.validator.ValidPhone.message=Invalid phone number for region: {0}. Use format: {1}.
+com.expressui.sample.validator.PhoneConversionValidator.message=Invalid phone number
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login name is already taken
 
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Phone number may not contain letters
