--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -95,7 +95,7 @@ entityForm.entityCaption.existing={0} Forumular - {1}
 entityForm.tabWithInvalidValues=Eingabefeld enthält ungültige Werte
 entityForm.formWithInvalidValues=Formular enthält ungültige Werte
 
-selectField.clear.toolTip=Formular zurücksetzen
+selectField.clear.toolTip=Zurücksetzen
 selectField.search.toolTip=Fenster öffnen um Datensatz auszuwählen
 
 formField.defaultLabelSectionDisplayName=Formular
