Fixes to archetype

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/domainMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/domainMessages/messages_en.properties
@@ -3,5 +3,11 @@
 #set( $symbol_escape = '\' )
 ${symbol_pound} This file is for externalizing/internationalizing domain- or entity-level messages
 ${symbol_pound} Here are some examples, others may be added.
+
+${package}.MyApplication=${artifactId} Application
+
+${package}.view.PersonPage=People
+
+${package}.entity.Person=Person
 ${package}.entity.Person.firstName=First Name
 ${package}.entity.Person.lastName=Last Name
