--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
@@ -4,11 +4,10 @@
 
 ${symbol_pound} This file is for externalizing/internationalizing UI-level messages/labels
 
-mainApplication.caption=${artifactId} Application
 mainApplication.dataConstraintViolation=Data constraint violation
-mainApplication.entityNotFound=You are acting on an entity ({0}) that longer exists. Refresh and try again.
+mainApplication.entityNotFound=You are acting on an entity ({0}) that no longer exists. Refresh and try again.
 mainApplication.logout=Logout
-mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click me to keep your session active.
+mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click here to keep your session active.
 mainApplication.errorWindowCaption=Error
 mainApplication.confirmationCaption=Please confirm:
 mainApplication.confirmationYes=Yes
@@ -22,6 +21,7 @@ searchForm.clear=Clear
 searchForm.clear.toolTip=Clear query filter
 searchForm.search=Search
 searchForm.search.toolTip=Execute query
+searchForm.typeCaption={0} Search Form
 
 results.first.toolTip=Go to first page
 results.previous.toolTip=Go to previous page
@@ -55,10 +55,23 @@ aggregationRelationship.added=Selected items added!
 aggregationRelationship.removed=Selected items removed!
 
 exportForm.caption="Export Parameters"
+exportForm.typeCaption=Excel Export
 exportForm.export=Excel Export
 exportForm.export.toolTip= Export to Excel
 exportForm.close=Cancel
 exportForm.close.toolTip=Close Export Window
+exportForm.exportFilename=Export Filename
+exportForm.workbookName=Workbook Name
+exportForm.sheetName=Sheet Name
+exportForm.dateFormat=Date Format
+exportForm.doubleFormat=Double Format
+exportForm.displayRowHeaders=Display Row Headers
+exportForm.displayTotals=Display Totals
+exportForm.defaultWorkbookName=Export
+exportForm.defaultSheetName=Export
+exportForm.defaultFileName=Export.xls
+exportForm.defaultDateFormat=mm/dd/yyyy
+exportForm.defaultDoubleFormat=#,000.00
 
 typedForm.add=Add
 typedForm.remove=Remove
@@ -80,8 +93,19 @@ entityForm.saveConflictError=Changes conflict with another user's changes. Refre
 entityForm.saveValidationError=has validation errors!
 entityForm.previous.toolTip=Discard changes and go to previous record
 entityForm.next.toolTip=Discard changes and go to next record
+entityForm.typeCaption={0} Form
+entityForm.entityCaption.new={0} Form - New
+entityForm.entityCaption.existing={0} Form - {1}
+entityForm.tabWithInvalidValues=Tab contains invalid values
+entityForm.formWithInvalidValues=Form contains invalid values
 
 selectField.clear.toolTip=Clear current entity
 selectField.search.toolTip=Open search popup to select related entity
+
+formField.defaultLabelSectionDisplayName=Form
+resultsField.defaultLabelSectionDisplayName=Column
+formFieldSet.select.nullCaption=None
+
+entitySelect.typeCaption=Select {0}
 
 codePopup.toolTip=See code and Javadoc behind UI component
