--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -3,7 +3,7 @@
 mainApplication.dataConstraintViolation=Data constraint violation
 mainApplication.entityNotFound=You are acting on an entity ({0}) that no longer exists. Refresh and try again.
 mainApplication.logout=Logout
-mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click me to keep your session active.
+mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click here to keep your session active.
 mainApplication.errorWindowCaption=Error
 mainApplication.confirmationCaption=Please confirm:
 mainApplication.confirmationYes=Yes
@@ -68,7 +68,6 @@ exportForm.defaultSheetName=Export
 exportForm.defaultFileName=Export.xls
 exportForm.defaultDateFormat=mm/dd/yyyy
 exportForm.defaultDoubleFormat=#,000.00
-
 
 typedForm.add=Add
 typedForm.remove=Remove
