Excel pattern fix, added create data file to avoid build problems if geo service goes down

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages_en.properties
@@ -71,7 +71,7 @@ exportForm.defaultWorkbookName=Export
 exportForm.defaultSheetName=Export
 exportForm.defaultFileName=Export.xls
 exportForm.defaultDateFormat=mm/dd/yyyy
-exportForm.defaultDoubleFormat=#,000.00
+exportForm.defaultDoubleFormat=${symbol_pound}${symbol_pound}${symbol_pound},${symbol_pound}${symbol_pound}${symbol_pound}
 
 typedForm.add=Add
 typedForm.remove=Remove
