--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -67,7 +67,7 @@ exportForm.defaultWorkbookName=Export
 exportForm.defaultSheetName=Export
 exportForm.defaultFileName=Export.xls
 exportForm.defaultDateFormat=dd/mm/yyyy
-exportForm.defaultDoubleFormat=#.000,00
+exportForm.defaultDoubleFormat=###,###
 
 typedForm.add=Hinzufügen
 typedForm.remove=Entfernen
