--- a/sample/src/main/resources/uiMessages/messages_en.properties
+++ b/sample/src/main/resources/uiMessages/messages_en.properties
@@ -67,7 +67,7 @@ exportForm.defaultWorkbookName=Export
 exportForm.defaultSheetName=Export
 exportForm.defaultFileName=Export.xls
 exportForm.defaultDateFormat=mm/dd/yyyy
-exportForm.defaultDoubleFormat=#,000.00
+exportForm.defaultDoubleFormat=###,###
 
 typedForm.add=Add
 typedForm.remove=Remove
