Fixes to internationalization after testing against alternate default locales in browser and JDK

--- a/sample/src/main/resources/uiMessages/messages.properties
+++ b/sample/src/main/resources/uiMessages/messages.properties
@@ -129,4 +129,7 @@ sampleDashBoard.opportunityChartByYear.closedLost=Closed Lost
 sampleDashBoard.opportunityChartBySalesStage=Sales Stage Breakdown
 sampleDashBoard.opportunitySalesStages=Sales Stages
 
+sampleApplication.internetConnectivityError=The sample application requires an Internet connection.</br>If it is running behind a proxy,\
+  please configure http.proxyHost and http.proxyPort in application.properties.
+
 
