--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -128,3 +128,6 @@ sampleDashBoard.opportunityChartByYear.closedWon=Erfolgreich abgeschlossen
 sampleDashBoard.opportunityChartByYear.closedLost=Nicht erfolgreich abgeschlossen
 sampleDashBoard.opportunityChartBySalesStage=Verkaufsphase Übersicht
 sampleDashBoard.opportunitySalesStages=Verkaufsphase
+
+sampleApplication.internetConnectivityError=Die Beispielapplikation erfordet eine Internetverbindung. </ Br> Wenn es hinter einem Proxy läuft, \
+   konfigurieren Sie bitte http.proxyHost und http.proxyPort in application.properties.
