--- a/sample/src/main/resources/ValidationMessages_de.properties
+++ b/sample/src/main/resources/ValidationMessages_de.properties
@@ -1,5 +1,4 @@
-﻿# Here's an example for NotNull, using the word "empty" rather than "null,"
-# which is more friendly term for an end-user
+﻿# See documentation in ValidationMessages.properties.
 
 javax.validation.constraints.NotNull.message=Feld muss ausgef\u00FCllt werden
 
@@ -7,14 +6,15 @@ com.expressui.core.validation.NumberConversionValidator.message=Ungültige Numme
 com.expressui.core.view.field.FormField.required.message=Erforderlicher Wert fehlt
 com.expressui.core.view.field.FormField.dateParseError.message=Datumsformat ist ungültige
 com.expressui.core.entity.security.ValidPermission.message=Zugangsberechtigung für Auswahl des Datensatzes bereits vorhanden
+com.expressui.core.entity.security.User.passwordsDoNotMatch=Eingegebene Passw\u00F6rter stimmen nicht \u00FCberein
 
 com.expressui.sample.validator.ValidPhone.message=Ungültige Telefonnummer für Region: {0}. Verwenden Sie Format: {1}.
 com.expressui.sample.validator.PhoneConversionValidator.message=Ungültige Telefonnummer
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login-Name ist bereits vergeben
+com.expressui.sample.util.ValidUrl.message=Ung\u00FCltige URL
 
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Telefonnummer darf keine Buchstaben enthalten
 
-# some properties loaded directly by Hibernate (instead of Spring) require unicode escaping
 com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hlten Land
 com.expressui.sample.entity.Address.zipCodeInvalidForUS=US-Postleitzahl muss 5 oder 9-stellig sein
 com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA Postleitzahl muss das Format haben: A0A 0A0
@@ -22,5 +22,4 @@ com.expressui.sample.entity.Address.stateRequiredForCountry=Angabe des Bundeslan
 com.expressui.sample.entity.Opportunity.actualCloseDateRequiredIfSalesStageClosed=Erforderlich, wenn Verkaufsphase abgeschlossen wurde
 com.expressui.sample.entity.Opportunity.actualCloseDateEmptyIfSalesStageOpen=Muss leer sein, wenn Verkaufsphase noch läuft
 com.expressui.sample.entity.Opportunity.expectedCloseDateEmptyIfSalesStageClosed=Muss leer sein, wenn Verkaufsphase abgeschlossen wurde
-com.expressui.core.entity.security.User.passwordsDoNotMatch=Eingegebene Passw\u00F6rter stimmen nicht \u00FCberein
 
