--- a/sample/src/main/resources/domainMessages/messages.properties
+++ b/sample/src/main/resources/domainMessages/messages.properties
@@ -1,4 +1,28 @@
-# This file is for externalizing/internationalizing domain- or entity-level messages
+# This file is for externalizing/internationalizing domain-level messages, which describe the domain model
+# rather than general UI components.
+
+# Field labels are keyed in a format like so: com.expressui.sample.entity.Contact.mailingAddress.street,
+# where properties can be deeply nested. The starting point of the type tree is the class of the object
+# bound to a UI component like a Form or Results. Each display field bounded to a nested property
+# can be mapped to an internationalized label. Tooltips are mapped simply by appending .tooltip to the
+# end of the property path.
+#
+# If no message is found here, then ExpressUI looks for @Label and @Tooltip annotations on properties
+# in the code. If these are not found, then ExpressUI automatically generates labels from property names
+# in the code.
+#
+# You can also set and internationalize labels programmatically, which overrides any annotations or messages found here.
+#
+# ExpressUI also provides alternate ways of mapping labels and tooltips here.
+# For example, if the root domain type bound to a UI component were Contact, then you could map street with either:
+#   com.expressui.sample.entity.Contact.mailingAddress.street=street
+#   or
+#   com.expressui.sample.entity.Address.street=street
+# If both exist, then com.expressui.sample.entity.Contact.mailingAddress.street has priority because it is more specific.
+# However, com.expressui.sample.entity.Address.street would still apply to
+# com.expressui.sample.entity.Contact.billingAddress.street if that were not specifically mapped.
+#
+# The same prioritization logic applies to tooltips.
 
 com.expressui.sample.SampleApplication=Sample Application
 
