--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -1,4 +1,4 @@
-# This file is for externalizing/internationalizing UI-level messages/labels
+# See documentation in message.properties.
 
 mainApplication.dataConstraintViolation=Unzulässige Eingabe
 mainApplication.entityNotFound=Datensatz nicht mehr vorhanden ({0}). Aktualisieren und erneut versuchen.
