Changed version to 1.0.0-SNAPSHOT Various security permission fixes Minor javadoc enhancements

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages.properties
@@ -15,7 +15,7 @@ mainApplication.confirmationNo=No
 mainApplication.confirmationPrompt=Are you really sure?
 mainApplication.footerMessage=Powered by ExpressUI
 mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
-mainApplication.notAllowed="Not allowed access to this resource
+mainApplication.notAllowed=Not allowed access to resource: {0}
 
 searchForm.clear=Clear
 searchForm.clear.toolTip=Clear query filter
