--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -11,7 +11,7 @@ mainApplication.confirmationNo=Nein
 mainApplication.confirmationPrompt=Sind Sie sicher?
 mainApplication.footerMessage=Powered by ExpressUI
 mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
-mainApplication.notAllowed=Nicht erlaubter Zugriff
+mainApplication.notAllowed=Nicht erlaubter Zugriff: {0}
 
 searchForm.clear=Zurücksetzen
 searchForm.clear.toolTip=Zurücksetzen der Suchabfrage
